--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grapesjs-chartjs-plugin",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "Grapesjs Chartjs Plugin",
   "main": "dist/index.js",
   "repository": {
@@ -8,19 +8,28 @@
     "url": "https://github.com/fasenderos/grapesjs-chartjs-plugin.git"
   },
   "scripts": {
-    "start": "grapesjs-cli serve",
     "build": "grapesjs-cli build",
-    "bump": "npm version patch -m 'Bump v%s'"
+    "lint": "biome check ./src",
+    "lint:fix": "biome check --write ./src",
+    "release": "release-it --ci",
+    "release:beta": "release-it --ci --preRelease=beta",
+    "release:major": "release-it major --ci",
+    "release:minor": "release-it minor --ci",
+    "release:patch": "release-it patch --ci",
+    "start": "grapesjs-cli serve"
   },
   "keywords": [
     "grapesjs",
     "plugin"
   ],
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
+    "@release-it/conventional-changelog": "^10.0.0",
     "chart.js": "^4.4.7",
     "css-loader": "^7.1.2",
     "grapesjs": "^0.22.5",
     "grapesjs-cli": "^4.1.3",
+    "release-it": "^18.1.2",
     "style-loader": "^4.0.0"
   },
   "license": "MIT"
