--- a/.release-it.json
+++ b/.release-it.json
@@ -35,6 +35,7 @@
     }
   },
   "hooks": {
-    "before:init": ["npm run lint"]
+    "before:init": "npm run lint",
+    "after:bump": "npm run build"
   }
 }
