chore: remove unusefull css loader

--- a/.release-it.json
+++ b/.release-it.json
@@ -13,7 +13,8 @@
     "tagArgs": ["-s"]
   },
   "npm": {
-    "publish": false
+    "publish": true,
+    "access": "public"
   },
   "plugins": {
     "@release-it/conventional-changelog": {
