--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "https://github.com/fasenderos/grapesjs-chartjs-plugin/issues"
   },
   "scripts": {
-    "build": "grapesjs-cli build --patch=false",
+    "build": "rm -rf ./dist && grapesjs-cli build --patch=false",
     "lint": "biome check ./src",
     "lint:fix": "biome check --write ./src",
     "release": "release-it --ci",
@@ -34,11 +34,16 @@
     "@biomejs/biome": "1.9.4",
     "@release-it/conventional-changelog": "^10.0.0",
     "chart.js": "^4.4.7",
-    "css-loader": "^7.1.2",
     "grapesjs": "^0.22.5",
     "grapesjs-cli": "^4.1.3",
-    "release-it": "^18.1.2",
-    "style-loader": "^4.0.0"
+    "release-it": "^18.1.2"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "files": [
+    "dist",
+    "CHANGELOG.md",
+    "LICENSE",
+    "README.md",
+    "package.json"
+  ]
 }
